# TypeLayout

./: .gitignore  AGENTS.md  APPLICATIONS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONFERENCE_PROPOSAL.md  CONTRIBUTING.md  CPPCON2026_PROPOSAL.md  Jamfile  PROOFS.md  README.md  REPO_AUDIT.md  antora-playbook.yml  build.jam  build_and_run.sh  merge_files.bat  merge_files.sh  package.json  report0302.md  sumary.md  summary.md  task1.md  task2.md  task3.md  task4.md  task5.md  task8.md
.claude/: settings.json  settings.local.json
.claude/commands/: add-test.md  add-tool.md  add-type-category.md  build-test.md  commit.md  debug-signature.md  modify-signature-format.md  push.md  reconfigure.md  review.md  sig-check.md
.codemaker/rules/: rules.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/docker/: Dockerfile.gcc16  Dockerfile.p2996
.github/workflows/: b2.yml  ci.yml  compat-check.yml  compat-pipeline.yml  cross-platform-compat.yml  docker-build.yml  docs.yml  toolchain-images.yml
bench/compile_time/: CMakeLists.txt  RESULTS.md  bench_compile_time.cpp  run_benchmarks.sh
build-docker/: DartConfiguration.tcl  demo  file_format_example  network_protocol_example  plugin_interface_example  shared_memory_demo  test_two_layer  typelayout-tool
build-docker/Testing/Temporary/: CTestCostData.txt
build-linux/: DartConfiguration.tcl  demo  file_format_example  network_protocol_example  plugin_interface_example  shared_memory_demo  test_alignment  test_all_types  test_anonymous_member  test_signature_comprehensive  test_signature_extended  test_user_defined_types  typelayout-tool
build-linux/Testing/Temporary/: CTestCostData.txt
cmake/: TypeLayoutCompat.cmake  typelayoutConfig.cmake.in
demo/: demo.cpp  xoffset_demo.cpp
doc/: Doxyfile  Jamfile.v2  TypeLayout-Tutorial-Complete.adoc  antora.yml  api_audit.md  api_reference.md  build-docs.cmd  build-docs.sh  design-rationale.md  package.json  quickstart.md  reviewer_qa.md  technical-report.md  technical_overview.md  typelayout.qbk
doc/analysis/: core_value_derivation.md  logic_clarity_report.md  reviewer_pitch.md  value_proposition.md
doc/api/: README.md
doc/boost/: interest-email-draft.md  submission_plan.md
doc/design/: abi-identity.md
doc/diagrams/: signature_guarantee.md
doc/modules/ROOT/: nav.adoc
doc/reports/: typelayout-completeness-analysis.adoc
doc/slides/: index.html
doc/talk/: abstract.md  outline.md
doc/test/: test_advanced  test_advanced_example.cpp  test_basic  test_basic_example.cpp
doc/video/: README.md  generate-video.js  scenes.config.js  script.md
doc/video/output/: files.txt
docs/: api-reference.md  applications.md  architecture.md  concept-analysis.md  conference-proposal-draft-merged-polished.md  conference-proposal-draft-native-layout.md  conference-proposal-draft.md  conference-proposal-outline.md  conference-proposal.md  conference-submission-strategy.md  core-value-analysis.md  migration-guide.md  proposal-audit-report.md  quickstart.md  technical_overview.md  wg21-author-outreach.md  wg21-paper.md
docs/analysis/: CROSS_PLATFORM_COLLECTION.md  ZERO_SERIALIZATION_TRANSFER.md
docs/paper/: sec1-introduction.md  sec2-background.md  sec3-system.md  sec4-formal.md  sec5-toolchain.md  sec6-evaluation.md  sec7-related.md  sec8-conclusion.md
example/: BEST_PRACTICES.md  Jamfile  README.md  compat_auto.hpp  compat_check.cpp  compat_ci_check.cpp  compat_ci_check_linux.cpp  compat_ci_export.cpp  compat_ci_types.hpp  core_demo.cpp  cross_platform_check.cpp  demo.cpp  file_format.cpp  network_protocol.cpp  plugin_interface.cpp  shared_memory_demo.cpp  typelayout.config.example.hpp  util_demo.cpp  xoffset_demo.cpp  zero_copy_network_demo.cpp
example/sigs/: arm64_macos_clang.sig.hpp  x86_64_linux_clang.sig.hpp  x86_64_windows_msvc.sig.hpp
example/sigs-green/: arm64_macos_clang.sig.hpp  x86_64_linux_clang.sig.hpp
include/: typelayout.hpp
include/boost/: typelayout.hpp
include/boost/typelayout/: admission.hpp  compat.hpp  concepts.hpp  config.hpp  fixed_string.hpp  fwd.hpp  layout_traits.hpp  opaque.hpp  portability.hpp  serialization_free.hpp  signature.hpp  transfer.hpp  typelayout.hpp  typelayout_all.hpp  typelayout_util.hpp  verification.hpp
meta/: libraries.json
openspec/: project.md
openspec/changes/add-anonymous-member-support/: proposal.md
openspec/changes/add-api-documentation/: tasks.md
openspec/changes/add-b2-build-support/: proposal.md  tasks.md
openspec/changes/add-boost-antora-docs/: design.md  proposal.md  tasks.md
openspec/changes/add-boost-license/: tasks.md
openspec/changes/add-boost-test-integration/: tasks.md
openspec/changes/add-changelog/: proposal.md
openspec/changes/add-ci-compat-check-tool/: proposal.md
openspec/changes/add-compat-toolchain/: proposal.md  tasks.md
scripts/: build-docs-local.sh  compare_signatures.py  test-b2-build.sh
test/: CMakeLists.txt  Jamfile  Jamfile.v2  analyze_signature.cpp  boost_test_typelayout.cpp  run_extended_tests.bat  run_extended_tests.sh  test_advanced_types.cpp  test_alignment.cpp  test_all_types.cpp  test_anonymous_member.cpp  test_bitfields.cpp  test_byte_copy_safe.cpp  test_classify.cpp  test_compat_check.cpp  test_complex_cases.cpp  test_concepts.cpp  test_constexpr_limits.cpp  test_edge_cases.cpp  test_empty_member_probe.cpp  test_fixed_string.cpp  test_hash.cpp  test_inheritance.cpp  test_layout_traits.cpp  test_opaque.cpp  test_padding_precision.cpp  test_physical_mode.cpp  test_portability.cpp  test_portable_fix.cpp  test_primitives.cpp  test_rt_padding.cpp  test_serialization_free.cpp  test_serialization_signature.cpp  test_sig_export.cpp  test_signature_compatibility.cpp  test_signature_comprehensive.cpp  test_signature_extended.cpp  test_signature_modes.cpp  test_signature_size.cpp  test_stress.cpp  (+5 more)
tools/: README.md  compare_signatures.cpp  compat_check_template.cpp.in  cross-platform-compat.yml  demo_tool.sh  platforms.conf  sig_export_template.cpp.in  siggen.cpp  typelayout-compat  typelayout_tool.cpp
(+647 files in other folders)
